--- a/code/The_Pushshift_Telegram_Dataset.ipynb
+++ b/code/The_Pushshift_Telegram_Dataset.ipynb
@@ -31,27 +31,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\HP\\\\PhD\\\\PushshiftChannels'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -146,6 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # NOT RUN (old code)\n",
+    "\n",
     "# # Messages\n",
     "\n",
     "# file = \"D:\\._PhD\\Literature\\Telegram\\Data\\The Pushshift Telegram Dataset\\messages.ndjson.zst\"\n",
@@ -246,7 +227,7 @@
     }
    ],
    "source": [
-    "len(filtered_records)"
+    "len(filtered_records) # number of records stored after ~ 5mins running time"
    ]
   },
   {
