--- a/code/The_Pushshift_Telegram_Dataset.ipynb
+++ b/code/The_Pushshift_Telegram_Dataset.ipynb
@@ -145,20 +145,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Read messages\n",
+    "\n",
     "import ujson\n",
     "import zstandard\n",
     "\n",
